<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="64dp"
    android:orientation="vertical"
    android:paddingTop="64dp"
    tools:context=".ui.home.HomeFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/common_functions"
            android:textSize="24sp" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:orientation="horizontal"
            android:padding="16dp"
            android:rowCount="5">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/deposit_manageButton"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/deposit_manage"
                    android:src="@android:drawable/ic_input_get" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deposit_manage" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/withdraw_manageButton"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/withdraw_manage"
                    android:src="@android:drawable/ic_menu_set_as" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/withdraw_manage" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/deposit_recordButton"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/title_deposit"
                    android:src="@drawable/ic_deposit_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_deposit" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/withdraw_recordButton"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/title_withdraw"
                    android:src="@drawable/ic_withdraw_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_withdraw" />
            </LinearLayout>


        </GridLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/quick_entrance"
            android:textSize="24sp" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="4"
            android:orientation="horizontal"
            android:padding="16dp"
            android:rowCount="5">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/category_addButton"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/category_add"
                    android:src="@android:drawable/ic_input_add" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category_add" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/category_editButton"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/category_edit"
                    android:src="@android:drawable/ic_menu_edit" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category_edit" />
            </LinearLayout>

        </GridLayout>

    </LinearLayout>
</LinearLayout>